<resources>

    <string name="app_name">Nevo - Enhanced Screenshot Notification</string>

    <string name="decorator_service_title">Enhanced Screenshot Notification</string>
    <string name="decorator_service_description">Take \"Edit\" action to screenshot notifications.</string>

    <string name="noti_channel_screenshot">Screenshots</string>
    <string name="noti_channel_screenshot_preview">Previewing screenshots</string>
    <string name="noti_channel_other">Other</string>
    <string name="noti_channel_permission">Permissions</string>
    <string name="noti_channel_assistant">Assistant</string>
    <string name="noti_channel_preview_service">Preview</string>

    <string name="noti_storage_permission_required_title">Storage permission required</string>
    <string name="noti_storage_permission_required_content">To provide \"Edit\" action for new screenshot, decorator application requires storage permission. Click here to request permission.</string>

    <string name="action_edit">Edit</string>
    <string name="chooser_title_edit">Choose editor</string>

    <string name="category_share_action">\"Share\" action</string>
    <string name="category_edit_action">\"Edit\" action</string>
    <string name="category_other">Other</string>
    <string name="pref_grant_storage_permission">Grant storage permission</string>
    <string name="pref_grant_storage_permission_summary_off">To provide \"Edit\" action for new screenshot, decorator application requires storage permission.</string>
    <string name="pref_grant_storage_permission_summary_on">If you want to deny storage permission, open application details settings - Permissions - Disable \"Storage\"</string>
    <string name="pref_screenshots_store_path">Screenshots store path</string>
    <string name="pref_screenshots_store_path_summary_format">Current path: %s\n\nMostly screenshots will be saved in \"\/sdcard\/Pictures\/Screenshots\". If the default path doesn\'t match your system, you can customize it here.</string>
    <string name="pref_preferred_editor">Preferred editor</string>
    <string name="ask_every_time">Ask every time</string>
    <string name="pref_preferred_editor_summary">Current select: %s\n\nClick \"Edit\" action to open preferred editor to edit screenshot directly.</string>
    <string name="pref_hide_icon_from_launcher">Hide icon from launcher</string>
    <string name="pref_hide_icon_from_launcher_summary">You can re-enter preferences screen from app details (Settings - All apps - \"Nevo - Enhanced Screenshot Notification\").</string>
    <string name="pref_action_after_sharing">Action after sharing</string>
    <string name="action_none">None</string>
    <string name="action_dismiss_notification_at_once">Dismiss notification at once</string>
    <string name="action_delete_screenshot">Delete screenshot automatically</string>
    <string-array name="actions_after_sharing">
        <item>@string/action_none</item>
        <item>@string/action_dismiss_notification_at_once</item>
        <item>@string/action_delete_screenshot</item>
    </string-array>
    <string name="pref_edit_action_text_format">Custom \"Edit\" action text format</string>
    <string name="pref_show_screenshots_count">Show screenshots count</string>
    <string name="pref_show_screenshots_count_summary">You can know how many screenshots you have taken in notification.</string>
    <string name="screenshots_count_format">%d shots</string>
    <string name="pref_show_screenshot_details">Show new screenshot details</string>
    <string name="pref_show_screenshot_details_summary">Add details about size, resolution and type of new screenshot to notification.</string>
    <string name="screenshot_details_format">Type: %1$s. Resolution: %2$s. Size: %3$s</string>
    <string name="pref_notification_settings">Screenshot notification settings</string>
    <string name="action_share_screenshot">Share screenshot</string>

    <string name="pref_about">About</string>
    <string name="pref_github_repo">Github Repository</string>
    <string name="pref_github_repo_url" translatable="false">https://github.com/fython/EnhancedScreenshotNotification</string>
    <string name="pref_telegram_discussion">Join Telegram group</string>
    <string name="pref_telegram_discussion_summary">Discuss ESN and send feedback in Telegram group.</string>
    <string name="telegram_discussion_url" translatable="false">https://gwo.app/esn/telegram</string>

    <string name="nevolution_missing_title">Nevolution required</string>
    <string name="nevolution_missing_content">You have to install \"Nevolution\" before using this decorator. Without it, we cannot enhance screenshot notifications.</string>
    <string name="go_to_google_play">Go to Google Play</string>

    <string name="pref_preview_in_floating_window">Preview in floating window</string>
    <string name="pref_preview_in_floating_window_summary">Current settings: %s\n\nClick screenshot notification to open a floating preview window.</string>
    <string name="pref_preview_type_none">No preview</string>
    <string name="pref_preview_type_pip">Android 8.0 PiP Mode</string>
    <string name="pref_preview_type_arisu">Arisu Mode</string>
    <string name="pref_preview_type_pip_summary"><![CDATA[
In this mode, preview interface is provided by Android system (at least 8.0) <b>without any custom gesture</b>.<br><br>
Generally, you can drag preview to where you like and click to toggle size. When it is expanded, you can
choose next actions, such as sharing, deleting and editing screenshot.
    ]]></string>
    <string name="pref_preview_type_arisu_summary"><![CDATA[
In Arisu mode, preview interface is provided by ourselves <b>with a smooth gesture</b> but relocating is not supported.<br><br>
- Swipe up to open screenshot.<br>
- Swipe down to dismiss preview window.<br>
- Click to toggle size and you can choose next actions when preview window is expanded.<br>
    ]]></string>
    <string name="pref_preview_type_dialog_not_save">You haven\'t chose any mode options. Preview will not be enabled. Do you want to leave?</string>
    <string name="pref_preview_in_floating_window_summary_unsupported">Your device haven\'t supported Picture in Picture feature or it\'s in low memory.</string>
    <string name="pref_replace_notification_with_preview">Show floating preview window instead</string>
    <string name="pref_replace_notification_with_preview_summary">Hide screenshot notification and open a floating preview window instead. Caution: It will interrupt current Picture in Picture activity like Chrome, YouTube\'s PiP.</string>

    <string name="noti_detect_barcode_subtitle">Barcode detection</string>
    <string name="pref_detect_barcode">Detect barcode in screenshot</string>
    <string name="pref_detect_barcode_summary">Help you read text, url, contacts, phone and etc from barcode in screenshot and do actions with them quickly (for example, open link in browser).\n\nPS: It won\'t start any detection before finishing capturing.</string>
    <string name="action_view_barcode">View barcode</string>
    <string name="noti_view_barcode_title_default">Barcode found in screenshot!</string>
    <string name="noti_view_barcode_text_multi">Found %d barcode(s). Click here to choose action.</string>
    <string name="noti_view_barcode_text_single">Content: %s</string>
    <string name="noti_view_barcode_title_url">URL found in screenshot</string>
    <string name="noti_view_barcode_text_url">%s</string>
    <string name="noti_view_barcode_title_phone">Phone number found in screenshot!</string>
    <string name="noti_view_barcode_text_phone">Tel: %s</string>
    <string name="toast_copied">Copied</string>
    <string name="noti_view_barcode_title_contact">Contact card found in screenshot!</string>
    <string name="noti_view_barcode_text_contact">Phone number: %s</string>
    <string name="action_add_to_contacts">Add to contacts</string>
    <string name="undefined">Undefined</string>
    <string name="barcode_type_unknown">Unknown</string>
    <string name="barcode_type_contact_info">Contact info</string>
    <string name="barcode_type_email">Email</string>
    <string name="barcode_type_isbn">ISBN</string>
    <string name="barcode_type_phone">Phone</string>
    <string name="barcode_type_product">Product</string>
    <string name="barcode_type_sms">SMS</string>
    <string name="barcode_type_text">Text</string>
    <string name="barcode_type_url">URL</string>
    <string name="barcode_type_wifi">Wi-Fi</string>
    <string name="barcode_type_geo">Geo</string>
    <string name="barcode_type_calendar_event">Calendar event</string>
    <string name="barcode_type_driver_license">Driver license</string>
    <string name="action_open_link">Open link</string>
    <string name="action_call">Call</string>

    <string name="action_feedback">Send feedback</string>
    <string name="action_help">Help</string>
    <string name="action_privacy_policy">Privacy policy</string>
    <string name="action_privacy_policy_url" translatable="false">https://gwo.app/esn/privacy_policy</string>

    <string name="toast_activity_not_found">No apps to handle this action.</string>

    <string name="noti_preview_service_title">Screenshot preview is showing.</string>
    <string name="noti_preview_service_text">You can change notification channel priority to hide this notification.</string>
    <string name="action_stop">Stop</string>

    <string name="switch_bar_enabled">Enabled</string>
    <string name="switch_bar_disabled">Disabled</string>

    <string name="action_support_us">Support us</string>
    <string name="support_us_dialog_title">Support us</string>
    <string name="support_us_dialog_message_play_store"><![CDATA[
Do you like this application (plugin) very much? You can give a 5 star on Play Store and leave your comment for rating our work.<br><br>
We are very grateful to all those who support us!
    ]]></string>
    <string name="support_us_dialog_message"><![CDATA[
Do you like this application (plugin) very much? You can give a 5 star on Play Store and leave your comment for rating our work.<br>
If you really love this, you can also donate us via Alipay.<br><br>
We are very grateful to all those who support us!
    ]]></string>
    <string name="rate_us">Rate us</string>
    <string name="donate">Donate via Alipay</string>
    <string name="alipay_dialog_title">Thank you~</string>
    <string name="alipay_dialog_message">My Alipay address: fythonx\@gmail.com\nIf you have installed Alipay, you can click the right button to launch directly.</string>
    <string name="alipay_installed_button">Yes, I have installed Alipay</string>

</resources>
