<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="storage_permission"
        android:title="@string/pref_grant_storage_permission"
        android:summaryOff="@string/pref_grant_storage_permission_summary_off"
        android:summaryOn="@string/pref_grant_storage_permission_summary_on"/>

    <Preference
        android:key="screenshot_path"
        android:title="@string/pref_screenshots_store_path"
        android:summary="@string/pref_screenshots_store_path_summary_format"/>

    <Preference
        android:key="preferred_editor"
        android:title="@string/pref_preferred_editor"
        android:summary="@string/pref_preferred_editor_summary"/>

    <CheckBoxPreference
        android:key="hide_launcher_icon"
        android:title="@string/pref_hide_icon_from_launcher"
        android:summary="@string/pref_hide_icon_from_launcher_summary"/>

    <PreferenceCategory android:title="@string/pref_about">

        <Preference
            android:key="github_repo"
            android:title="@string/pref_github_repo"
            android:summary="@string/pref_github_repo_url"/>

    </PreferenceCategory>

</PreferenceScreen>