<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <moe.feng.nevo.decorators.enscreenshot.widget.SwitchBar
            android:id="@+id/switch_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/switch_bar_height"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <LinearLayout android:id="@+id/choice_arisu_mode"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:background="?android:selectableItemBackground"
                          android:clickable="true"
                          android:focusable="true">

                <RadioButton android:id="@+id/radio_button_arisu_mode"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="16dp"/>

                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1"
                              android:paddingTop="16dp"
                              android:paddingBottom="16dp"
                              android:paddingStart="8dp"
                              android:paddingEnd="16dp"
                              android:orientation="vertical">

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/pref_preview_type_arisu"
                              android:textColor="?android:textColorPrimary"
                              android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

                    <moe.feng.nevo.decorators.enscreenshot.widget.HtmlTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/pref_preview_type_arisu_summary"
                            android:textColor="?android:textColorSecondary"
                            android:textAppearance="@android:style/TextAppearance.Material.Body1"/>

                </LinearLayout>

            </LinearLayout>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:layout_marginTop="4dp"
                  android:layout_marginBottom="4dp"
                  android:background="?android:listDivider"/>

            <LinearLayout android:id="@+id/choice_pip_mode"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:background="?android:selectableItemBackground"
                          android:clickable="true"
                          android:focusable="true">

                <RadioButton android:id="@+id/radio_button_pip_mode"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="16dp"/>

                <LinearLayout android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1"
                              android:paddingTop="16dp"
                              android:paddingBottom="16dp"
                              android:paddingStart="8dp"
                              android:paddingEnd="16dp"
                              android:orientation="vertical">

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/pref_preview_type_pip"
                              android:textColor="?android:textColorPrimary"
                              android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

                    <moe.feng.nevo.decorators.enscreenshot.widget.HtmlTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/pref_preview_type_pip_summary"
                            android:textColor="?android:textColorSecondary"
                            android:textAppearance="@android:style/TextAppearance.Material.Body1"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>